# advent-of-code

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md
aoc_2016/: README.md  pyproject.toml
aoc_2016/day_01/: day_01.py
aoc_2016/day_02/: day_02.py
aoc_2016/day_03/: day_03.py
aoc_2016/day_04/: day_04.py  input_part_2.txt
aoc_2016/day_05/: day_05.py
aoc_2016/day_06/: day_06.py
aoc_2016/day_07/: day_07.py
aoc_2016/day_08/: day_08.py
aoc_2016/day_09/: day_09.py
aoc_2016/day_10/: day_10.py
aoc_2016/day_11/: day_11.py
aoc_2016/day_12/: day_12.py
aoc_2017/: .gitignore  package.json  tsconfig.json
aoc_2018/: README.md  pyproject.toml
aoc_2018/day_01/: day_01.py
aoc_2018/day_02/: day_02.py
aoc_2018/day_03/: day_03.py
aoc_2018/day_04/: day_04.py
aoc_2018/day_05/: day_05.py
aoc_2018/day_06/: day_06.py
aoc_2018/day_07/: day_07.py
aoc_2018/day_08/: day_08.py
aoc_2018/day_09/: day_09.py
aoc_2018/day_10/: day_10.py
aoc_2018/day_11/: day_11.py
aoc_2018/day_13/: day_13.py
aoc_2018/day_14/: day_14.py
aoc_2019/: README.md  generate_day.py  pyproject.toml
aoc_2020/: Cargo.toml  README.md
aoc_2024/: Cargo.toml  README.md
aoc_2025/: README.md  generate_day.py  pyproject.toml
aoc_2025/day_01/: day_01.py
aoc_2025/day_02/: day_02.py
aoc_2025/day_03/: day_03.py
aoc_2025/day_04/: day_04.py
aoc_2025/day_05/: day_05.py
aoc_2025/day_06/: day_06.py
aoc_2025/day_07/: day_07.py
aoc_2025/day_08/: day_08.py
aoc_2025/day_09/: day_09.py
aoc_2025/day_10/: day_10.py
aoc_2025/day_11/: day_11.py
(+79 files in other folders)
