[project]
name = "aoc-2018"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.12.1",
]
[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP",  # pyupgrade
    "B", # flake8-bugbear
    "SIM",  # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "PLR2004", # magic value
]
