[project]
name = "aoc-2025"
version = "0.1.0"
description = "My advent of code 2025 solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.14.7",
]
[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP",  # pyupgrade
    "B", # flake8-bugbear
    "SIM",  # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "PLR2004", # magic value
]
